# hIRC

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  bynets.xml  client.cc  client.h  data.txt  freenode.xml  libiconv_wrapper.cc  libiconv_wrapper.h  logger.cc  logger.h  main.cc  message.cc  message.h  socket.cc  socket.cpp  utils.cc  utils.h  xml_config.cc  xml_config.cpp  xml_config.h  xml_config.hpp
lexer/: Makefile  lex.yy.c  message.cc  message.h  messages.example  messages.flex  parameters.flex  regex_test.cc  test.flex
tests/: regex_test.cc
tests/data/: test_messages.txt
